<resources>
    <string name="app_name">Wealth Simple - TM</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login">Login</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="signup_now">Signup Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="monthly_withdrawal">Monthly Withdrawal</string>
    <string name="monthly_investment">Monthly Investment</string>
    <string name="lumpsum_investment">Lumpsum Investment</string>
    <string name="lumpsum_withdraw_amount">Lumpsum Withdrawal Amount</string>
    <string name="monthly_withdraw_amount">Monthly Withdrawal Amount</string>
    <string name="all_units">All Units</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="made_with">Made with</string>
    <string name="by">by</string>
    <string name="credit1">Ankit Priyarup (Lead Developer)</string>
    <string name="credit2">Anukriti Kumar (Developer)</string>
    <string name="credit3">Gangesh Chawla (Project Manager)</string>
    <string name="credit4">Kuldeep KD Bagwari (Backend Developer)</string>
    <string name="your_estimated_wealth">Your Estimated Wealth:</string>
    <string name="_10_years">10 years</string>
    <string name="_20_years">20 years</string>
    <string name="_50_years">50 years</string>
    <string name="your_actions">Your Actions:</string>
    <string name="your_wealth_today">Your Wealth Today:</string>
    <string name="recent_transactions">Recent Transactions:</string>
    <string name="withdraw">Withdraw</string>
    <string name="empty_status">You haven\'t purchased anything yet</string>
    <string name="invested">Invested:</string>
    <string name="gain_loss">Gain/Loss:</string>
    <string name="withdrawnamount">Withdrawn:</string>
    <string name="multiple">Multiple:</string>
    <string name="net_investment">Net Investment:</string>
    <string name="market_value">Market Value:</string>
    <string name="confirm_dob">Confirm your Date Of Birth</string>
    <string name="spotlight_title1">Add and Withdraw Amounts</string>
    <string name="spotlight_description1">Easily add and withdraw transactions in one tap</string>
    <string name="spotlight_title2">Estimate earnings</string>
    <string name="spotlight_description2">Not sure how much to invest? Calculate and plan your investment first</string>
    <string name="videos">Videos</string>
    <string name="documents">Documents</string>
    <string name="monitor">Monitor</string>
    <string name="checklist">Checklist</string>
    <string name="learn">Learn</string>
    <string name="add_amount">Add Amount</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="estimate">Estimate</string>
    <string name="credits">Credits</string>
    <string name="sign_out">Sign Out</string>
    <string name="accept_all_terms">Accept All Terms</string>
    <string name="check_now">Check Now</string>
    <string name="lacs">Lacs</string>
    <string name="crores">Crores</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_failed_message">Sorry, user not found. Please recheck your mobile number. In case you are not a Bharosa member visit www.bharosaclub.com and become a member.</string>
    <string name="login_failed_credential_message">Sorry, credentials didn\'t match. Please recheck your credentials.</string>
    <string name="okay">OK</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="act">ACT</string>
    <string name="knowledge">KNOWLEDGE</string>
    <string name="reset">Reset Password</string>
    <string name="oldPass">Old Password: </string>
    <string name="newPass">New Password: </string>
    <string name="confirmPass">Confirm Password: </string>
    <string name="reset_btn">RESET </string>
    <string name="confirm">Confirm</string>
    <string name="desc_update">Type the new amount that you want the current value to be updated to</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="update">Update</string>
    <string name="privacy_title">Our Privacy Policy</string>
    <string name="privacy_intro">Effective date: July 30, 2018 \n Bharosa Technoserve Private Limited ("us", "we", or "our") operates the website www.bharosaclub.con and the Wealth Simple-Triple Money mobile application (the "Service"). \n
This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.\n
We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</string>
    <string name="heading1">Information Collection And Use:</string>
    <string name="heading1_data">We collect several different types of information for various purposes to provide and improve our Service to you.</string>
    <string name="heading2">Types of Data Collected: </string>
    <string name="heading2_data">Personal Data: \n While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you ("Personal Data"). Personally identifiable information may include, but is not limited to: \n
Email address \n Phone number \n Cookies and Usage Data \n Usage Data: \n We may also collect information that your browser sends whenever you visit our Service or when you access the Service by or through a mobile device ("Usage Data").\n
This Usage Data may include information such as your computer\'s Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that you visit, the time and date of your visit, the time spent on those pages, unique device identifiers and other diagnostic data.\n
When you access the Service by or through a mobile device, this Usage Data may include information such as the type of mobile device you use, your mobile device unique ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browser you use, unique device identifiers and other diagnostic data.\n
Tracking And Cookies Data:\n We use cookies and similar tracking technologies to track the activity on our Service and hold certain information.\n
Cookies are files with small amount of data which may include an anonymous unique identifier. Cookies are sent to your browser from a website and stored on your device. Tracking technologies also used are beacons, tags, and scripts to collect and track information and to improve and analyze our Service.\n
You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service.
\n Examples of Cookies we use:\nSession Cookies: We use Session Cookies to operate our Service.\nPreference Cookies: We use Preference Cookies to remember your preferences and various settings.
Security Cookies: We use Security Cookies for security purposes.</string>
    <string name="heading4">Information Sharing And Disclosure: </string>
    <string name="heading4_data">We will share your personal information with third parties (e.g. Mutual Fund Utility – MFU) only in the manner described in this privacy statement. We do not sell your personal information to third parties. \n
We may provide your personal information to companies that provide services to help us with our business activities such as offering customer service. These companies are authorized to use your personal information only as necessary to provide these services to us.
\nWe may also disclose your personal information:\n  as required by law such as to comply with legal process\n  when we believe in good faith that disclosure is necessary to protect our rights, protect your safety or the safety of others, investigate fraud, or respond to a government request,
\n  if Bharosa Club, a service of Bharosa Club is involved in a merger, acquisition, or sale of all or a portion of its assets, you will be notified via email and/or a prominent notice on our Web site of any change in ownership or uses of your personal information, as well as any choices you may have regarding your personal information,
\n  to any other third party with your prior consent to do so </string>
    <string name="heading5">Security Of Data: </string>
    <string name="heading5_data">The security of your data is important to us, but remember that no method of transmission over the Internet, or method of elec
Security Of Data</string>
    <string name="heading6">Service Providers: </string>
    <string name="heading6_data">We may employ third party companies and individuals to facilitate our Service ("Service Providers"), to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.
These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.
</string>
    <string name="heading7">Google Analytics: </string>
    <string name="heading7_data">Google Analytics is a web analytics service offered by Google that tracks and reports website traffic. Google uses the data collected to track and monitor the use of our Service. This data is shared with other Google services. Google may use the collected data to contextualize and personalize the ads of its own advertising network.
   For more information on the privacy practices of Google, please visit the Google Privacy and Terms web page: https://policies.google.com/privacy?hl=en
</string>
    <string name="heading8">Links To Other Sites: </string>
    <string name="heading8_data">Our Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party\'s site. We strongly advise you to review the Privacy Policy of every site you visit.
We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.
</string>
    <string name="heading9">Children\'s Privacy: </string>
    <string name="heading9_data">Our Service does not address anyone under the age of 18 ("Children").We do not knowingly collect personally identifiable information from anyone under the age of 18. If you are a parent or guardian and you are aware that your Children has provided us with Personal Data, please contact us. If we become aware that we have collected Personal Data from children without verification of parental consent, we take steps to remove that information from our servers.</string>
    <string name="heading10">Changes To This Privacy Policy: </string>
    <string name="heading10_data">We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.
We will let you know via email and/or a prominent notice on our Service, prior to the change becoming effective and update the "effective date" at the top of this Privacy Policy.
You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</string>
    <string name="heading11">Contact Us: </string>
    <string name="heading11_data">You can contact us about this privacy statement by writing or email us at the address below: \n\n
401 Aradhana Apartments,\n RK Puram Sector 13,\n New Delhi – 110066 India \n \n Email : advisory@bharosaclub.com</string>
</resources>