<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:navigationIcon="@drawable/ic_estimate_dark"
        app:title="@string/update_transaction"
        app:titleTextColor="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/desc_update"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/update_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:maxLength="7"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:labelFor="@id/add_lumpsum_investment"
        android:textColor="#000000"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/update_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/cancel"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/update_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/update"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>